--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.2",
-    "mongodb": "2.6.12"
+    "mongodb": "2.6.12",
+    "request": "^2.81.0"
   }
 }
